--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -20,10 +20,12 @@ $fhd: 1900px;
     --container_padding: 16px;
     --primary_font: 'Raleway', Arial, sans-serif;
     --secondary_font: 'Montserrat', Arial, sans-serif;
+    --container_max_width: 1248px;
     @media(min-width: $md) {
         --header_min_heigt: 120px;
     }
     @media(min-width: $fhd) {
         --header_min_heigt: 125px;
+        --container_max_width: 1584px;
     }
 }
