--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -15,3 +15,4 @@
 @import "styles/_to-top.scss";
 @import "styles/_footer.scss";
 @import "styles/_main-banner.scss";
+@import "styles/_request-form.scss";
