--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -16,6 +16,7 @@ $fhd: 1900px;
     --grey_light: #E3E7EC;
     --grey_medium: #C9CAD1;
     --grey_dark: #999EAB;
+    --attention: #F8BF51;
     --header_min_heigt: 60px;
     --container_padding: 16px;
     --primary_font: 'Raleway', Arial, sans-serif;
