--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -10,9 +10,12 @@
 @import "base/_popup.scss";
 @import "base/_form.scss";
 @import "base/_social-link.scss";
+@import "base/_combobox.scss";
+@import "base/_pager.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
 @import "styles/_footer.scss";
 @import "styles/_main-banner.scss";
 @import "styles/_request-form.scss";
+@import "styles/_catalog.scss";
