--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -76,19 +76,9 @@ h6 {
     margin-top: 0;
 }
 
-h1 {
-    font-size: 26px;
-    font-weight: 900;
-    line-height: 1.23076;
-    margin-bottom: 16px;
-    @media(min-width: $sm) {
-        font-size: 32px;
-        line-height: 1.21875;
-        margin-bottom: 32px;
-    }
-}
-
+.h1,
 .h2,
+h1,
 h2 {
     font-size: 26px;
     font-weight: 500;
