--- a/src/css/base/_buttons.scss
+++ b/src/css/base/_buttons.scss
@@ -106,11 +106,16 @@
     }
 
     &--h_56 {
-        border-radius: 28px;
+        border-radius: 24px;
         font-size: 21px;
-        height: 56px;
+        height: 48px;
         line-height: 1.52380;
-        padding-bottom: 4px;
+        padding-bottom: 2px;
+        @media(min-width: $fhd) {
+            border-radius: 28px;
+            height: 56px;
+            padding-bottom: 4px;
+        }
 
         svg {
             height: 24px;
@@ -124,6 +129,21 @@
         border-radius: 24px;
         font-size: 21px;
         height: 48px;
+        line-height: 1.52380;
+        padding-bottom: 2px;
+
+        svg {
+            height: 24px;
+            min-width: 24px;
+            margin-top: 2px;
+            width: 24px;
+        }
+    }
+
+    &--h_40 {
+        border-radius: 20px;
+        font-size: 18px;
+        height: 40px;
         line-height: 1.52380;
         padding-bottom: 4px;
 
