--- a/src/css/styles/_breadcrumbs.scss
+++ b/src/css/styles/_breadcrumbs.scss
@@ -6,7 +6,12 @@
     position: relative;
     z-index: 1;
     @media(min-width: $fhd) {
-        --container_padding: 24px;
+        --container_padding: 32px;
+        padding-left: 0;
+        padding-right: 0;
+    }
+    @media(max-width: $fhd - 0.02px) {
+        font-family: var(--secondary_font);
     }
 
     &--light {
@@ -35,6 +40,11 @@
         -ms-overflow-style: none;
         scrollbar-width: none;
         white-space: nowrap;
+        @media(min-width: $fhd) {
+            margin-left: auto;
+            margin-right: auto;
+            max-width: 1910px;
+        }
 
         &::-webkit-scrollbar {
             display: none;
