--- a/src/template/pager.html
+++ b/src/template/pager.html
@@ -1,20 +1,42 @@
-<ul class="pager">
-    <li class="pager__item">
-        <a class="pager__link is-active" href="#">1</a>
-    </li>
-    <li class="pager__item">
-        <a class="pager__link" href="#">2</a>
-    </li>
-    <li class="pager__item">
-        <a class="pager__link" href="#">3</a>
-    </li>
-    <li class="pager__item">
-        <a class="pager__link" href="#">...</a>
-    </li>
-    <li class="pager__item">
-        <a class="pager__link" href="#">7</a>
-    </li>
-    <li class="pager__item">
-        <a class="pager__link" href="#">8</a>
-    </li>
-</ul>
+<div class="pager">
+    <a class="pager__show-more" href="#">
+        <span>Показать ещё</span>
+        <svg aria-hidden="true">
+            <use xlink:href="images/sprite.svg#chevron_down_light_16" />
+        </svg>
+    </a>
+
+    <ul class="pager__list">
+        <li class="pager__item pager__item--prev">
+            <span class="pager__arrow">
+                <svg aria-hidden="true">
+                    <use xlink:href="images/sprite.svg#chevron_left_24" />
+                </svg>
+            </span>
+        </li>
+
+        <li class="pager__item">
+            <a class="pager__link is-active" href="#">1</a>
+        </li>
+        <li class="pager__item">
+            <a class="pager__link" href="#">2</a>
+        </li>
+        <li class="pager__item">
+            <a class="pager__link" href="#">3</a>
+        </li>
+        <li class="pager__item">
+            <a class="pager__link" href="#">...</a>
+        </li>
+        <li class="pager__item">
+            <a class="pager__link" href="#">50</a>
+        </li>
+
+        <li class="pager__item pager__item--next">
+            <a class="pager__arrow" href="#" title="Вперёд">
+                <svg aria-hidden="true">
+                    <use xlink:href="images/sprite.svg#chevron_right_24" />
+                </svg>
+            </a>
+        </li>
+    </ul>
+</div>
