--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -9,6 +9,7 @@ $fhd: 1900px;
     --dark: #2A303E;
     --blue_light: #EFF8FF;
     --blue_medium: #DAF0FF;
+    --blue_dark: #80BDE8;
     --primary: #1E76E2;
     --primary_hover: #00A3FF;
     --primary_pressed: #40B3F4;
@@ -17,6 +18,7 @@ $fhd: 1900px;
     --grey_medium: #C9CAD1;
     --grey_dark: #999EAB;
     --attention: #F8BF51;
+    --alert: #C12F3A;
     --header_min_heigt: 60px;
     --container_padding: 16px;
     --primary_font: 'Raleway', Arial, sans-serif;
