--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -7,11 +7,13 @@
 @import "base/_checkboxes_and_radio.scss";
 @import "base/_inputs_and_textareas.scss";
 @import "base/_accordion.scss";
-@import "base/_popup.scss";
+@import "base/_popups.scss";
 @import "base/_form.scss";
 @import "base/_social-link.scss";
 @import "base/_combobox.scss";
 @import "base/_pager.scss";
+@import "base/_more-button.scss";
+@import "base/_back-link.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -19,3 +21,6 @@
 @import "styles/_main-banner.scss";
 @import "styles/_request-form.scss";
 @import "styles/_catalog.scss";
+@import "styles/_reviews.scss";
+@import "styles/_author-short.scss";
+@import "styles/_blog.scss";
