--- a/src/css/styles/_footer.scss
+++ b/src/css/styles/_footer.scss
@@ -1,5 +1,6 @@
 .footer {
-    background: linear-gradient(0.85deg, #0045A2 0.73%, #2FA5E6 84.02%, #EFF8FF 99.27%);
+    background-image: linear-gradient(0deg, #0045A2 0%, #2FA5E6 76%, #EFF8FF 99%);
+    background-position: 0 0;
     color: #fff;
     flex-shrink: 0;
     position: relative;
