--- a/src/template/common/header.html
+++ b/src/template/common/header.html
@@ -28,18 +28,23 @@
                         </ul>
                     </div>
                 </li>
+
                 <li class="header__top-menu-item">
                     <a href="#"><span>О компании</span></a>
                 </li>
+
                 <li class="header__top-menu-item">
                     <a href="#"><span>Статьи</span></a>
                 </li>
+
                 <li class="header__top-menu-item">
                     <a href="#"><span>СМИ о нас</span></a>
                 </li>
+
                 <li class="header__top-menu-item">
                     <a href="#"><span>Карьера</span></a>
                 </li>
+
                 <li class="header__top-menu-item">
                     <a href="#"><span>Контакты</span></a>
                 </li>
@@ -82,6 +87,7 @@
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Портфолио</span></a>
                 </li>
+
                 <li class="js-d-menu-toggler header__bottom-menu-item">
                     <a href="#">
                         <span>Разработка игр</span>
@@ -288,24 +294,29 @@
                         </div>
                     </div>
                 </li>
+
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Промоигры</span></a>
                 </li>
+
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Игры для телеграм</span></a>
                 </li>
+
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Игры для мероприятий</span></a>
                 </li>
+
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Геймдизайн</span></a>
                 </li>
+
                 <li class="header__bottom-menu-item">
                     <a href="#"><span>Консультация</span></a>
                 </li>
             </ul>
 
-            <button class="header__callback button button--h_48" type="button">
+            <button class="header__callback button button--h_48" type="button" data-fancybox="request" data-src="#request">
                 <svg aria-hidden="true">
                     <use xlink:href="images/sprite.svg#phone_icon" />
                 </svg>
