--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -84,6 +84,9 @@ h2 {
     font-weight: 500;
     line-height: 1.33333;
     margin-bottom: 24px;
+    @media(min-width: $hd) {
+        font-size: 32px;
+    }
     @media(min-width: $fhd) {
         font-size: 48px;
         font-weight: 400;
