--- a/src/css/base/_checkboxes_and_radio.scss
+++ b/src/css/base/_checkboxes_and_radio.scss
@@ -2,6 +2,7 @@
     align-items: center;
     display: flex;
     gap: 8px;
+    font-family: var(--secondary_font);
     @include hover {
         input {
             &:not(:disabled) {
