--- a/src/css/base/_inputs_and_textareas.scss
+++ b/src/css/base/_inputs_and_textareas.scss
@@ -14,7 +14,9 @@
     border-radius: 24px;
     box-shadow: none;
     color: #fff;
+    font-family: var(--secondary_font);
     height: 48px;
+    margin: 0;
     padding: 4px 16px 6px;
     width: 100%;
 
@@ -43,6 +45,7 @@
     height: 112px;
     resize: none;
     padding: 8px 16px;
+    scrollbar-width: thin;
 }
 
 .error-text {
@@ -53,7 +56,7 @@
 }
 
 .required {
-    padding-right: 16px;
+    padding-right: 8px;
     position: relative;
     z-index: 1;
 
