--- a/src/css/styles/_request-form.scss
+++ b/src/css/styles/_request-form.scss
@@ -1,66 +1,58 @@
 .request-form {
-    border-radius: 24px;
     color: #fff;
-    padding: 16px;
-    position: relative;
-    z-index: 1;
-    @media(min-width: $md) {
-        padding: 40px;
-    }
-    @media(min-width: $fhd) {
-        border-radius: 32px;
-        padding: 56px;
-    }
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 590px;
 
-    &::after,
-    &::before {
+    &--stand_alone {
         border-radius: 24px;
-        bottom: 0;
-        content: '';
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 0;
+        background-image: url("../images/backgrounds/request_form/mobile.svg"), linear-gradient(90deg, #12AAFF 0%, #0079E5 100%);
+        background-position: 50% 0, 0 0;
+        background-size: cover, cover;
+        background-repeat: no-repeat, no-repeat;
+        max-width: 100%;
+        margin: 0;
+        padding: 16px;
+        @media(min-width: $md) {
+            background-image: url("../images/backgrounds/request_form/desktop.svg"), linear-gradient(90deg, #12AAFF 0%, #0079E5 100%);
+            background-position: 50% 100%, 0 0;
+            padding: 40px;
+        }
         @media(min-width: $fhd) {
             border-radius: 32px;
+            padding: 56px;
         }
-    }
 
-    &::before {
-        background-image: linear-gradient(90deg, #12AAFF 0%, #0079E5 100%);
-        z-index: 0;
-    }
+        .request-form__left {
+            @media(min-width: $md) {
+                margin-bottom: 0;
+            }
+            @media(min-width: $md) {
+                width: 50%;
+            }
+        }
 
-    &::after {
-        background-image: url("../images/backgrounds/request_form/mobile.svg");
-        background-position: 50% 0;
-        background-size: cover;
-        background-repeat: no-repeat;
-        bottom: -1px;
-        left: -1px;
-        right: -1px;
-        z-index: 1;
-        @media(min-width: $md) {
-            background-image: url("../images/backgrounds/request_form/desktop.svg");
-            background-position: 50% 100%;
+        .request-form__right {
+            @media(min-width: $md) {
+                padding-left: 24px;
+                width: 50%;
+            }
+            /*.input-group {
+                margin-right: 0;
+            }*/
         }
     }
 
     &__inner {
-        position: relative;
-        z-index: 2;
         @media(min-width: $md) {
             display: flex;
         }
     }
 
     &__left {
-        @media(max-width: $md - 0.02px) {
-            margin-bottom: 32px;
-        }
+        margin-bottom: 32px;
         @media(min-width: $md) {
-            width: 50%;
+            margin-bottom: 24px;
         }
 
         h2 {
@@ -99,9 +91,8 @@
     }
 
     &__right {
-        @media(min-width: $md) {
-            padding-left: 24px;
-            width: 50%;
+        .input-group {
+            margin-right: -8px;
         }
     }
 
@@ -118,6 +109,12 @@
     }
 
     &__form {
-        max-width: 606px;
+        @media(min-width: $md) {
+            max-width: 606px;
+        }
+    }
+
+    &__submit {
+        width: 100%;
     }
 }
