--- a/src/template/pager.html
+++ b/src/template/pager.html
@@ -25,6 +25,9 @@
             <a class="pager__link" href="#">3</a>
         </li>
         <li class="pager__item">
+            <a class="pager__link" href="#">4</a>
+        </li>
+        <li class="pager__item">
             <a class="pager__link" href="#">...</a>
         </li>
         <li class="pager__item">
