--- a/src/template/request_form.html
+++ b/src/template/request_form.html
@@ -1,4 +1,4 @@
-<section class="request-form">
+<section class="request-form request-form--stand_alone">
     <div class="request-form__inner">
         <div class="request-form__left">
             <h2>Готовы создать свою<br> игру?</h2>
@@ -40,7 +40,7 @@
                     </div>
                 </div>
 
-                <button class="button button--light button--h_56" type="submit">
+                <button class="request-form__submit button button--light button--h_56" type="submit">
                     <svg aria-hidden="true">
                         <use xlink:href="images/sprite.svg#doc_icon" />
                     </svg>
