--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -14,6 +14,8 @@
 @import "base/_pager.scss";
 @import "base/_more-button.scss";
 @import "base/_back-link.scss";
+@import "base/_slider-arrow.scss";
+@import "base/_slider-pagination.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -24,3 +26,4 @@
 @import "styles/_reviews.scss";
 @import "styles/_author-short.scss";
 @import "styles/_blog.scss";
+@import "styles/_persons-slider.scss";
