--- a/src/css/base/_combobox.scss
+++ b/src/css/base/_combobox.scss
@@ -119,7 +119,7 @@
 
     &__link-avatar {
         align-items: center;
-        background-color: var(--blue_dark);
+        background-color: #8ABDDC;
         border-radius: 50%;
         display: flex;
         justify-content: center;
@@ -131,17 +131,6 @@
         &--image {
             position: relative;
             z-index: 1;
-            /*&::after {
-                background-color: var(--blue_dark);
-                bottom: 0;
-                content: '';
-                left: 0;
-                opacity: 0.5;
-                position: absolute;
-                right: 0;
-                top: 0;
-                z-index: 1;
-            }*/
         }
 
         img {
@@ -151,7 +140,7 @@
             object-fit: cover;
             object-position: center;
             width: 32px;
-            background: var(--blue_dark);
+            background-color: #8ABDDC;
             mix-blend-mode: overlay;
         }
 
