--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -24,11 +24,16 @@ $fhd: 1900px;
     --primary_font: 'Raleway', Arial, sans-serif;
     --secondary_font: 'Montserrat', Arial, sans-serif;
     --container_max_width: 1248px;
+    --section_vertical_gap: 48px;
     @media(min-width: $md) {
         --header_min_heigt: 120px;
+    }
+    @media(min-width: $hd) {
+        --section_vertical_gap: 64px;
     }
     @media(min-width: $fhd) {
         --header_min_heigt: 125px;
         --container_max_width: 1584px;
+        --section_vertical_gap: 96px;
     }
 }
