--- a/src/css/styles/_footer.scss
+++ b/src/css/styles/_footer.scss
@@ -1,10 +1,13 @@
 .footer {
-    background-image: linear-gradient(0deg, #0045A2 0%, #2FA5E6 76%, #EFF8FF 99%);
-    background-position: 0 0;
+    background-image: url("../images/backgrounds/footer/mobile.svg"), linear-gradient(0deg, #0045A2 0%, #2FA5E6 76%, #EFF8FF 100%);
+    background-position: 50% 100%, 0 0;
+    background-repeat: no-repeat, no-repeat;
+    background-size: 100% auto, 100% 100%;
     color: #fff;
     flex-shrink: 0;
-    position: relative;
-    z-index: 1;
+    @media(min-width: $md) {
+        background-image: url("../images/backgrounds/footer/desktop.svg"), linear-gradient(0deg, #0045A2 0%, #2FA5E6 76%, #EFF8FF 100%);
+    }
 
     a {
         color: currentColor;
@@ -15,20 +18,6 @@
         }
         @include active {
             color: currentColor;
-        }
-    }
-
-    &::before {
-        background: url("../images/backgrounds/footer/mobile.svg") no-repeat 50% 100% / 100% auto;
-        bottom: 0;
-        content: '';
-        left: 0;
-        position: absolute;
-        right: 0;
-        top: 0;
-        z-index: 0;
-        @media(min-width: $md) {
-            background: url("../images/backgrounds/footer/desktop.svg") no-repeat 50% 100% / 100% auto;
         }
     }
 
