--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,6 +16,7 @@
 @import "base/_back-link.scss";
 @import "base/_slider-arrow.scss";
 @import "base/_slider-pagination.scss";
+@import "base/_tabs.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
