--- a/src/css/styles/_persons-slider.scss
+++ b/src/css/styles/_persons-slider.scss
@@ -1,5 +1,4 @@
 .persons-slider {
-    //filter: drop-shadow(0px 0px 133px rgba(106, 198, 255, 0.25));
     position: relative;
     z-index: 1;
     @media(max-width: $hd - 0.02px) {
@@ -10,22 +9,7 @@
     .swiper {
         margin-top: -15px;
 
-        &::after {
-            @media(min-width: $md) {
-                content: '';
-                position: absolute;
-                pointer-events: none;
-                touch-action: none;
-                width: 160px;
-                height: 100%;
-                right: 0;
-                left: auto;
-                top: 0;
-                background: linear-gradient(90deg, rgba(232, 245, 255, 0) 0%, var(--blue_light) 90%);
-                z-index: 1;
-            }
-        }
-
+        &::after,
         &::before {
             @media(min-width: $md) {
                 content: '';
@@ -34,8 +18,22 @@
                 touch-action: none;
                 width: 160px;
                 height: 100%;
-                left: 0;
                 top: 0;
+            }
+        }
+
+        &::after {
+            @media(min-width: $md) {
+                right: 0;
+                left: auto;
+                background: linear-gradient(90deg, rgba(232, 245, 255, 0) 0%, var(--blue_light) 90%);
+                z-index: 1;
+            }
+        }
+
+        &::before {
+            @media(min-width: $md) {
+                left: 0;
                 background: linear-gradient(270deg, rgba(232, 245, 255, 0) 0%, var(--blue_light) 90%);
                 z-index: 2;
             }
@@ -178,7 +176,7 @@
             border-radius: 24px;
         }
         @media(min-width: $fhd) {
-            margin-bottom: 32px;
+            margin-bottom: 24px;
         }
 
         img {
