--- a/src/template/persons-slider-small.html
+++ b/src/template/persons-slider-small.html
@@ -5,14 +5,14 @@
                 <div class="person-card person-card--small">
                     <div class="person-card__left">
                         <div class="person-card__avatar">
-                            <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                            <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                         </div>
 
                         <h3 class="person-card__name"><a href="#">Пешехонов<br> Алексей Владимирович</a></h3>
 
                         <p class="person-card__place">Директор DreamCraft Studio</p>
 
-                        <button class="person-card__more more-button" type="button" data-fancybox="person_1" data-src="#person_1">
+                        <button class="person-card__more more-button" type="button" data-fancybox="person__1" data-src="#person__1">
                             <span>Подробнее</span>
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
@@ -20,11 +20,11 @@
                         </button>
                     </div>
 
-                    <div id="person_1" class="person-card__right">
+                    <div id="person__1" class="person-card__right">
                         <div class="person-card__right-inner">
                             <div class="person-card__avatar-block">
                                 <div class="person-card__avatar">
-                                    <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                                    <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                                 </div>
 
                                 <div>
@@ -73,14 +73,14 @@
                 <div class="person-card person-card--small">
                     <div class="person-card__left">
                         <div class="person-card__avatar">
-                            <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                            <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                         </div>
 
                         <h3 class="person-card__name"><a href="#">Пешехонов<br> Алексей Владимирович</a></h3>
 
                         <p class="person-card__place">Директор DreamCraft Studio</p>
 
-                        <button class="person-card__more more-button" type="button" data-fancybox="person_2" data-src="#person_2">
+                        <button class="person-card__more more-button" type="button" data-fancybox="person__2" data-src="#person__2">
                             <span>Подробнее</span>
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
@@ -88,11 +88,11 @@
                         </button>
                     </div>
 
-                    <div id="person_2" class="person-card__right">
+                    <div id="person__2" class="person-card__right">
                         <div class="person-card__right-inner">
                             <div class="person-card__avatar-block">
                                 <div class="person-card__avatar">
-                                    <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                                    <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                                 </div>
 
                                 <div>
@@ -141,14 +141,14 @@
                 <div class="person-card person-card--small">
                     <div class="person-card__left">
                         <div class="person-card__avatar">
-                            <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                            <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                         </div>
 
                         <h3 class="person-card__name"><a href="#">Пешехонов<br> Алексей Владимирович</a></h3>
 
                         <p class="person-card__place">Директор DreamCraft Studio</p>
 
-                        <button class="person-card__more more-button" type="button" data-fancybox="person_3" data-src="#person_3">
+                        <button class="person-card__more more-button" type="button" data-fancybox="person__3" data-src="#person__3">
                             <span>Подробнее</span>
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
@@ -156,11 +156,11 @@
                         </button>
                     </div>
 
-                    <div id="person_3" class="person-card__right">
+                    <div id="person__3" class="person-card__right">
                         <div class="person-card__right-inner">
                             <div class="person-card__avatar-block">
                                 <div class="person-card__avatar">
-                                    <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                                    <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                                 </div>
 
                                 <div>
@@ -209,14 +209,14 @@
                 <div class="person-card person-card--small">
                     <div class="person-card__left">
                         <div class="person-card__avatar">
-                            <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                            <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                         </div>
 
                         <h3 class="person-card__name"><a href="#">Пешехонов<br> Алексей Владимирович</a></h3>
 
                         <p class="person-card__place">Директор DreamCraft Studio</p>
 
-                        <button class="person-card__more more-button" type="button" data-fancybox="person_4" data-src="#person_4">
+                        <button class="person-card__more more-button" type="button" data-fancybox="person__4" data-src="#person__4">
                             <span>Подробнее</span>
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
@@ -224,11 +224,11 @@
                         </button>
                     </div>
 
-                    <div id="person_4" class="person-card__right">
+                    <div id="person__4" class="person-card__right">
                         <div class="person-card__right-inner">
                             <div class="person-card__avatar-block">
                                 <div class="person-card__avatar">
-                                    <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                                    <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                                 </div>
 
                                 <div>
@@ -277,14 +277,14 @@
                 <div class="person-card person-card--small">
                     <div class="person-card__left">
                         <div class="person-card__avatar">
-                            <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                            <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                         </div>
 
                         <h3 class="person-card__name"><a href="#">Пешехонов<br> Алексей Владимирович</a></h3>
 
                         <p class="person-card__place">Директор DreamCraft Studio</p>
 
-                        <button class="person-card__more more-button" type="button" data-fancybox="person_5" data-src="#person_5">
+                        <button class="person-card__more more-button" type="button" data-fancybox="person__5" data-src="#person__5">
                             <span>Подробнее</span>
                             <svg aria-hidden="true">
                                 <use xlink:href="images/sprite.svg#popup_icon" />
@@ -292,11 +292,11 @@
                         </button>
                     </div>
 
-                    <div id="person_5" class="person-card__right">
+                    <div id="person__5" class="person-card__right">
                         <div class="person-card__right-inner">
                             <div class="person-card__avatar-block">
                                 <div class="person-card__avatar">
-                                    <img src="images/content/team/img.jpg" srcset="images/content/team/img@2x.jpg 2x" alt="">
+                                    <img src="images/content/team/img_2.jpg" srcset="images/content/team/img_2@2x.jpg 2x" alt="">
                                 </div>
 
                                 <div>
