--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -16,6 +16,8 @@
 @import "base/_slider-arrow.scss";
 @import "base/_slider-pagination.scss";
 @import "base/_tabs.scss";
+@import "base/_trans-table.scss";
+@import "base/_arrow-button.scss";
 @import "styles/_header.scss";
 @import "styles/_breadcrumbs.scss";
 @import "styles/_to-top.scss";
@@ -27,3 +29,6 @@
 @import "styles/_author-short.scss";
 @import "styles/_blog.scss";
 @import "styles/_persons-slider.scss";
+@import "styles/_features.scss";
+@import "styles/_links-cards.scss";
+@import "styles/_services-cards.scss";
