--- a/src/css/base/_pager.scss
+++ b/src/css/base/_pager.scss
@@ -36,6 +36,9 @@
         gap: 4px;
         margin-top: 16px;
         justify-content: center;
+        @media(max-width: $md - 0.02px) {
+            display: none;
+        }
     }
 
     &__item {
