--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -211,9 +211,6 @@ ul {
     margin-top: 0;
     margin-bottom: 1em;
     padding: 0;
-    @media(min-width: $sm) {
-        margin-bottom: 1.5em;
-    }
 
     &:last-child {
         margin-bottom: 0;
@@ -225,25 +222,61 @@ ol {
 }
 
 ul {
-    &:not([class]) {
+    &.bullet {
         list-style: none;
 
         li {
-            padding-left: 22px;
+            min-height: 24px;
+            padding-left: 32px;
             position: relative;
             z-index: 1;
 
+            &:not(:last-child) {
+                margin-bottom: 8px;
+            }
+
             &::before {
-                background-color: currentColor;
-                border-radius: 50%;
+                background-repeat: no-repeat;
+                background-position: 0 0;
                 content: '';
-                height: 3px;
-                left: 11px;
+                height: 24px;
+                left: 0;
                 position: absolute;
-                top: 0.9em;
-                transform: translate(-50%, -50%);
-                width: 3px;
+                top: 0;
+                width: 24px;
                 z-index: 1;
+            }
+        }
+    }
+
+    &.bullet--type_1 {
+        li {
+            &::before {
+                background-image: url("data:image/svg+xml,%3Csvg wihdth='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2300A3FF' d='M12,20.8c-0.5,0-1-0.2-1.4-0.6l-6.8-6.8C3.5,13,3.2,12.5,3.2,12s0.2-1,0.6-1.4l6.8-6.8c0.8-0.8,2.1-0.8,2.8,0l6.8,6.8c0.4,0.4,0.6,0.9,0.6,1.4s-0.2,1-0.6,1.4l-6.8,6.8C13,20.5,12.5,20.8,12,20.8z M12,4.2c-0.3,0-0.5,0.1-0.7,0.3l-6.8,6.8c-0.2,0.2-0.3,0.4-0.3,0.7s0.1,0.5,0.3,0.7l6.8,6.8c0.4,0.4,1,0.4,1.4,0l6.8-6.8c0.2-0.2,0.3-0.4,0.3-0.7s-0.1-0.5-0.3-0.7l-6.8-6.8C12.5,4.4,12.3,4.2,12,4.2z'/%3E%3Ccircle fill='%231E76E2' cx='12' cy='12' r='1.7'/%3E%3C/svg%3E");
+            }
+        }
+    }
+
+    &.bullet--type_1_white {
+        li {
+            &::before {
+                background-image: url("data:image/svg+xml,%3Csvg wihdth='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23FFF' opacity='0.6' d='M12,20.8c-0.5,0-1-0.2-1.4-0.6l-6.8-6.8C3.5,13,3.2,12.5,3.2,12s0.2-1,0.6-1.4l6.8-6.8c0.8-0.8,2.1-0.8,2.8,0l6.8,6.8c0.4,0.4,0.6,0.9,0.6,1.4s-0.2,1-0.6,1.4l-6.8,6.8C13,20.5,12.5,20.8,12,20.8z M12,4.2c-0.3,0-0.5,0.1-0.7,0.3l-6.8,6.8c-0.2,0.2-0.3,0.4-0.3,0.7s0.1,0.5,0.3,0.7l6.8,6.8c0.4,0.4,1,0.4,1.4,0l6.8-6.8c0.2-0.2,0.3-0.4,0.3-0.7s-0.1-0.5-0.3-0.7l-6.8-6.8C12.5,4.4,12.3,4.2,12,4.2z'/%3E%3Ccircle fill='%23FFF' cx='12' cy='12' r='1.7'/%3E%3C/svg%3E");
+            }
+        }
+    }
+
+    &.bullet--type_2 {
+        li {
+            &::before {
+                background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%2300A3FF' d='M11.9,20.7c-0.5,0-1-0.2-1.4-0.6l-6.8-6.8C3.4,13,3.1,12.5,3.1,12c0-0.5,0.2-1,0.6-1.4l6.8-6.8c0.8-0.8,2.1-0.8,2.8,0l0,0l0,0l6.8,6.8c0.4,0.4,0.6,0.9,0.6,1.4c0,0.5-0.2,1-0.6,1.4l-6.8,6.8C12.9,20.5,12.4,20.7,11.9,20.7z M11.9,4.2c-0.3,0-0.5,0.1-0.7,0.3l-6.8,6.8c-0.2,0.2-0.3,0.4-0.3,0.7s0.1,0.5,0.3,0.7l6.8,6.8c0.4,0.4,1,0.4,1.4,0l6.8-6.8c0.2-0.2,0.3-0.4,0.3-0.7s-0.1-0.5-0.3-0.7l-6.8-6.8C12.4,4.3,12.2,4.2,11.9,4.2z'/%3E%3Cpath fill='%231E76E2' d='M11.7,14.6c-0.3,0-0.5-0.1-0.7-0.3l-2.6-2.6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l1.9,1.9l7.4-7.4c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-8.2,8.2C12.2,14.5,12,14.6,11.7,14.6z'/%3E%3C/svg%3E");
+            }
+        }
+    }
+
+    &.bullet--type_2_white {
+        li {
+            &::before {
+                background-image: url("data:image/svg+xml,%3Csvg width='24' height='24' xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath fill='%23FFF' opacity='0.6' d='M11.9,20.7c-0.5,0-1-0.2-1.4-0.6l-6.8-6.8C3.4,13,3.1,12.5,3.1,12c0-0.5,0.2-1,0.6-1.4l6.8-6.8c0.8-0.8,2.1-0.8,2.8,0l0,0l0,0l6.8,6.8c0.4,0.4,0.6,0.9,0.6,1.4c0,0.5-0.2,1-0.6,1.4l-6.8,6.8C12.9,20.5,12.4,20.7,11.9,20.7z M11.9,4.2c-0.3,0-0.5,0.1-0.7,0.3l-6.8,6.8c-0.2,0.2-0.3,0.4-0.3,0.7s0.1,0.5,0.3,0.7l6.8,6.8c0.4,0.4,1,0.4,1.4,0l6.8-6.8c0.2-0.2,0.3-0.4,0.3-0.7s-0.1-0.5-0.3-0.7l-6.8-6.8C12.4,4.3,12.2,4.2,11.9,4.2z'/%3E%3Cpath fill='%23FFF' d='M11.7,14.6c-0.3,0-0.5-0.1-0.7-0.3l-2.6-2.6c-0.4-0.4-0.4-1,0-1.4s1-0.4,1.4,0l1.9,1.9l7.4-7.4c0.4-0.4,1-0.4,1.4,0s0.4,1,0,1.4l-8.2,8.2C12.2,14.5,12,14.6,11.7,14.6z'/%3E%3C/svg%3E");
             }
         }
     }
