--- a/src/css/base/_variables.scss
+++ b/src/css/base/_variables.scss
@@ -18,6 +18,8 @@ $fhd: 1900px;
     --grey_medium: #C9CAD1;
     --grey_dark: #999EAB;
     --attention: #F8BF51;
+    --success_light: #CBF7DC;
+    --success_dark: #47A180;
     --alert: #C12F3A;
     --header_min_heigt: 60px;
     --container_padding: 16px;
