--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -32,3 +32,5 @@
 @import "styles/_features.scss";
 @import "styles/_links-cards.scss";
 @import "styles/_services-cards.scss";
+@import "styles/_service.scss";
+@import "styles/_tarifs.scss";
