--- a/src/css/base/_tabs.scss
+++ b/src/css/base/_tabs.scss
@@ -18,10 +18,14 @@
         height: 48px;
         line-height: 1.5;
         padding: 0 12px;
+        transition: color 0.3s;
         @media(min-width: $fhd) {
             font-size: 20px;
             padding-left: 24px;
             padding-right: 24px;
+        }
+        @include hover {
+            color: #fff;
         }
 
         &.is-active {
