--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -34,3 +34,5 @@
 @import "styles/_services-cards.scss";
 @import "styles/_service.scss";
 @import "styles/_tarifs.scss";
+@import "styles/_portfolio-cards.scss";
+@import "styles/_docs-slider.scss";
