--- a/src/css/base/_base.scss
+++ b/src/css/base/_base.scss
@@ -152,9 +152,10 @@ h3 {
     font-weight: 700;
     line-height: 1.5;
     margin-top: 0;
+    margin-bottom: 16px;
 
-    &:not(:last-child) {
-        margin-bottom: 16px;
+    &:last-child {
+        margin-bottom: 0;
     }
 }
 
